--- a/Atividade_4.ipynb
+++ b/Atividade_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRDkylQOJ8Uxo+WxiW2098",
+      "authorship_tag": "ABX9TyOzPmhzUeneV84S6i/y+YOe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 251,
       "metadata": {
         "id": "p0S8mrgQCyQg"
       },
@@ -59,12 +59,12 @@
         "  else:\n",
         "      return 'O'\n",
         "\n",
-        "# Se a rodada for par, o jogador atual será 'X', caso for impar o jogador atual será'O'"
+        "# Se a rodada for par, o jogador atual será 'X', caso for impar o jogador atual será 'O'"
       ],
       "metadata": {
         "id": "QUZtaV07C14a"
       },
-      "execution_count": 50,
+      "execution_count": 252,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "3fSg1qClC9ml"
       },
-      "execution_count": 51,
+      "execution_count": 253,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "vkk9lCoCEyqR"
       },
-      "execution_count": 52,
+      "execution_count": 254,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "GqAnXIATFpSr"
       },
-      "execution_count": 53,
+      "execution_count": 255,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "RTwYm9toGjk6"
       },
-      "execution_count": 54,
+      "execution_count": 256,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "Kyn-Wlk0HnDI"
       },
-      "execution_count": 55,
+      "execution_count": 257,
       "outputs": []
     },
     {
@@ -199,7 +199,26 @@
       "metadata": {
         "id": "EIfTd_LTIIX8"
       },
-      "execution_count": 56,
+      "execution_count": 258,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def minimax(tabuleiro, rodada):\n",
+        "    jogador_atual = jogador(tabuleiro, rodada)\n",
+        "\n",
+        "    if jogador_atual == 'X':\n",
+        "        _, acao = maxValor(tabuleiro, rodada)\n",
+        "    else:\n",
+        "        _, acao = minValor(tabuleiro, rodada)\n",
+        "\n",
+        "    return acao"
+      ],
+      "metadata": {
+        "id": "dMib_utJQghz"
+      },
+      "execution_count": 259,
       "outputs": []
     },
     {
@@ -242,28 +261,7 @@
       "metadata": {
         "id": "CCTVG-CxIWK6"
       },
-      "execution_count": 57,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def minimax(tabuleiro, rodada):\n",
-        "    jogador_atual = jogador(tabuleiro, rodada)\n",
-        "    _, acao = maxValor(tabuleiro, rodada)\n",
-        "\n",
-        "    if jogador_atual == 'X':\n",
-        "      maxValor(tabuleiro, rodada)\n",
-        "\n",
-        "    else:\n",
-        "      minValor(tabuleiro, rodada)\n",
-        "\n",
-        "    return acao"
-      ],
-      "metadata": {
-        "id": "w1NKirynJjSn"
-      },
-      "execution_count": 58,
+      "execution_count": 260,
       "outputs": []
     },
     {
@@ -301,7 +299,7 @@
       "metadata": {
         "id": "z8LEqZ6LJGnO"
       },
-      "execution_count": 59,
+      "execution_count": 261,
       "outputs": []
     },
     {
@@ -312,7 +310,7 @@
       "metadata": {
         "id": "dU4gxNVjJHph"
       },
-      "execution_count": 60,
+      "execution_count": 262,
       "outputs": []
     },
     {
@@ -323,7 +321,7 @@
       "metadata": {
         "id": "IHXtLpk5JJgx"
       },
-      "execution_count": 61,
+      "execution_count": 263,
       "outputs": []
     },
     {
@@ -350,15 +348,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3t5WRSakJM_H",
-        "outputId": "b5ab8748-9279-4b9e-e69a-9c37dfe9d494"
+        "outputId": "521d2ada-a5fe-4fec-d0b3-ac5adee34938"
       },
-      "execution_count": 62,
+      "execution_count": 264,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Número randomizado: 2\n",
+            "Número randomizado: 1\n",
             "\n",
             "\n",
             " | | \n",
@@ -377,15 +375,15 @@
             "Rodada: 1\n",
             "\n",
             "\n",
-            "X|O| \n",
+            "X|X| \n",
             "-----\n",
             " | | \n",
             "-----\n",
             " | | \n",
-            "Rodada: 2\n",
+            "Rodada: 3\n",
             "\n",
             "\n",
-            "X|O|O\n",
+            "X|X|O\n",
             "-----\n",
             " | | \n",
             "-----\n",
@@ -393,7 +391,7 @@
             "Rodada: 4\n",
             "\n",
             "\n",
-            "X|O|O\n",
+            "X|X|O\n",
             "-----\n",
             "X| | \n",
             "-----\n",
@@ -401,35 +399,19 @@
             "Rodada: 5\n",
             "\n",
             "\n",
-            "X|O|O\n",
-            "-----\n",
-            "X| | \n",
-            "-----\n",
-            " |O| \n",
-            "Rodada: 6\n",
-            "\n",
-            "\n",
-            "X|O|O\n",
-            "-----\n",
-            "X|X| \n",
-            "-----\n",
-            " |O| \n",
-            "Rodada: 7\n",
-            "\n",
-            "\n",
-            "X|O|O\n",
-            "-----\n",
-            "X|X|O\n",
-            "-----\n",
-            " |O| \n",
-            "Rodada: 8\n",
-            "\n",
-            "\n",
-            "X|O|O\n",
-            "-----\n",
             "X|X|O\n",
             "-----\n",
             "X|O| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-----\n",
+            "X|O| \n",
+            "-----\n",
+            "X| | \n",
             "\n",
             "Jogador X ganhou 1 jogos.\n",
             "Jogador O ganhou 0 jogos.\n",
