--- a/Atividade_4.ipynb
+++ b/Atividade_4.ipynb
@@ -7,13 +7,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/GabrielDavi765/I.IA/blob/main/Atividade_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/GabrielDavi765/I.IA-atividade-4/blob/main/Atividade_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Na atividade 4 criamos um jogo da velha com o minimax, temos 2 arquivos sendo um com ambox os jogadores controlado pelo minimax, e o outro onde somente o X é controlado pelo minimxa e o O controlado pelo usuario, nosso jogo da velha possui uma alteração que faz com que um numero entre 1 e 2 seja sorteado e caso o numero for 1 o X tera 2 jogadas seguidas, agora caso o numero seja 2 o O tera 2 jogadas seguidas."
+        "Na atividade 4, criamos um jogo da velha com o minimax. Temos 2 arquivos, sendo um com ambos os jogadores controlados pelo minimax, e o outro onde somente o X é controlado pelo minimax e o O controlado pelo usuário. Nosso jogo da velha possui uma alteração que faz com que um número entre 1 e 2 seja sorteado, e caso o número seja 1, o X terá 2 jogadas seguidas. Agora, caso o número seja 2, o O terá 2 jogadas seguidas."
       ],
       "metadata": {
         "id": "H5b903F2Ur1e"
@@ -23,7 +23,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrZm49jBmZ6HltL4tnNVfw",
+      "authorship_tag": "ABX9TyMk3I37RXWxWsq+CGzOxSuM",
       "include_colab_link": true
     },
     "kernelspec": {
