--- a/Atividade_4_X_e_O_pelo_minimax.ipynb
+++ b/Atividade_4_X_e_O_pelo_minimax.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzPmhzUeneV84S6i/y+YOe",
+      "authorship_tag": "ABX9TyMLpndE2xvts6uSg1wke1tW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Nosso codigo é um jogo da velha utilizando minimax, com uma alteração que consiste em um jogador X ou O aleatorios possuirem direito a 2 jogadas seguidas de acordo com o numero(1 ou 2) sorteado\n",
+        "Nosso codigo é um jogo da velha utilizando minimax, com uma alteração que consiste em um jogador X ou O aleatorios possuirem direito a 2 jogadas seguidas de acordo com o numero(1,2,3) sorteado\n",
         "\n",
         "Gabriel Davi, Giordani Andre\n"
       ],
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 265,
+      "execution_count": null,
       "metadata": {
         "id": "p0S8mrgQCyQg"
       },
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "QUZtaV07C14a"
       },
-      "execution_count": 266,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "3fSg1qClC9ml"
       },
-      "execution_count": 267,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "vkk9lCoCEyqR"
       },
-      "execution_count": 268,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "GqAnXIATFpSr"
       },
-      "execution_count": 269,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,8 +138,7 @@
         "def final(tabuleiro):\n",
         "    vencedor = ganhador(tabuleiro)\n",
         "\n",
-        "    if vencedor:\n",
-        "        # Se há um vencedor, retorna o símbolo do vencedor\n",
+        "    if vencedor: # Se há um vencedor, retorna o símbolo do vencedor\n",
         "        return vencedor\n",
         "    else:\n",
         "        todas_celulas_preenchidas = all(all(cell != ' ' for cell in row) for row in tabuleiro) # Verifica se todas as células estão preenchidas (não contêm espaço em branco)\n",
@@ -153,7 +152,7 @@
       "metadata": {
         "id": "RTwYm9toGjk6"
       },
-      "execution_count": 270,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +176,7 @@
       "metadata": {
         "id": "Kyn-Wlk0HnDI"
       },
-      "execution_count": 271,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +198,7 @@
       "metadata": {
         "id": "EIfTd_LTIIX8"
       },
-      "execution_count": 272,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +217,7 @@
       "metadata": {
         "id": "dMib_utJQghz"
       },
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +260,7 @@
       "metadata": {
         "id": "CCTVG-CxIWK6"
       },
-      "execution_count": 274,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,9 +269,18 @@
         "def jogar_jogo():\n",
         "\n",
         "    tabuleiro = [[' ' for _ in range(3)] for _ in range(3)] # Inicia um novo jogo\n",
-        "    rodada = 0\n",
         "\n",
-        "    randomizador = random.randint(1, 2)  # Randomizador de 1 ou 2 para saber qual jogador (X ou O) vai ter 2 jogada\n",
+        "\n",
+        "    rodada = random.randint(-1, 0)\n",
+        "\n",
+        "    # randomizando numero de -1 e 0, decidindo quem iniciara a jogada(X=0,O=-1)\n",
+        "    if rodada == -1:\n",
+        "       print(\"O camecara jogando\\n\")\n",
+        "    elif rodada== 0:\n",
+        "       print(\"X camecara jogando\\n\")\n",
+        "\n",
+        "\n",
+        "    randomizador = random.randint(1, 3)  # Randomizador de 1,2 ou 3 para saber qual jogador (X ou O) vai ter 2 jogada\n",
         "    print(f\"Número randomizado: {randomizador}\")\n",
         "\n",
         "\n",
@@ -299,18 +307,18 @@
       "metadata": {
         "id": "z8LEqZ6LJGnO"
       },
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "N = 1 #numero de jogos"
+        "N = 10 #numero de jogos"
       ],
       "metadata": {
         "id": "dU4gxNVjJHph"
       },
-      "execution_count": 276,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -321,7 +329,7 @@
       "metadata": {
         "id": "IHXtLpk5JJgx"
       },
-      "execution_count": 277,
+      "execution_count": null,
       "outputs": []
     },
     {
