--- a/Atividade_4_X_e_O_pelo_minimax.ipynb
+++ b/Atividade_4_X_e_O_pelo_minimax.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLpndE2xvts6uSg1wke1tW",
+      "authorship_tag": "ABX9TyMH13hx/fvRGOlie5VL9aUu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -275,9 +275,9 @@
         "\n",
         "    # randomizando numero de -1 e 0, decidindo quem iniciara a jogada(X=0,O=-1)\n",
         "    if rodada == -1:\n",
-        "       print(\"O camecara jogando\\n\")\n",
+        "       print(\"O vai começar jogando\\n\")\n",
         "    elif rodada== 0:\n",
-        "       print(\"X camecara jogando\\n\")\n",
+        "       print(\"X vai começar jogando\\n\")\n",
         "\n",
         "\n",
         "    randomizador = random.randint(1, 3)  # Randomizador de 1,2 ou 3 para saber qual jogador (X ou O) vai ter 2 jogada\n",
@@ -352,10 +352,775 @@
         "print(f\"Houve {resultados['Empate']} empates.\")"
       ],
       "metadata": {
-        "id": "3t5WRSakJM_H"
+        "id": "3t5WRSakJM_H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8fbde3c6-e5e5-41c0-df53-534a20fdbbbc"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 1\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O| \n",
+            "Rodada: 8\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O|X\n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 1\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O| \n",
+            "Rodada: 8\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O|X\n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 2\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|O| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 2\n",
+            "\n",
+            "\n",
+            "O|O|O\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 1\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O| \n",
+            "Rodada: 8\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O|X\n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 3\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|O| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 2\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X| \n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|X| \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|X|O\n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 3\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|O| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 2\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X| \n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|X| \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|X|O\n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 2\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|O| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 2\n",
+            "\n",
+            "\n",
+            "O|O|O\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "\n",
+            " X camecara jogando\n",
+            "\n",
+            "Número randomizado: 3\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "X| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "X| | \n",
+            "-----\n",
+            " |O| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 2\n",
+            "\n",
+            "\n",
+            "X|X| \n",
+            "-----\n",
+            " |O| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "-----\n",
+            "X| | \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O| \n",
+            "-----\n",
+            "X| | \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O|X\n",
+            "-----\n",
+            "X| | \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|O| \n",
+            "Rodada: 8\n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|O|X\n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 1\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X| \n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "O|X| \n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            " |O| \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O| \n",
+            "Rodada: 8\n",
+            "\n",
+            "\n",
+            "O|X|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|O|X\n",
+            "\n",
+            " O camecara jogando\n",
+            "\n",
+            "Número randomizado: 3\n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: -1\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " | | \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 0\n",
+            "\n",
+            "\n",
+            "O| | \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 1\n",
+            "\n",
+            "\n",
+            "O|O| \n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 2\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            " | | \n",
+            "Rodada: 3\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            " |X| \n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 4\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X| \n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 5\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O| | \n",
+            "Rodada: 6\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|X| \n",
+            "Rodada: 7\n",
+            "\n",
+            "\n",
+            "O|O|X\n",
+            "-----\n",
+            "X|X|O\n",
+            "-----\n",
+            "O|X|O\n",
+            "\n",
+            "Jogador X ganhou 0 jogos.\n",
+            "Jogador O ganhou 2 jogos.\n",
+            "Houve 8 empates.\n"
+          ]
+        }
+      ]
     }
   ]
 }
